      Use the correct bit mask for IS-IS PDU type value.
      Fix the "|" and "&" operators of the "byte" primitive.
      Require "byte" argument value to be within range.
      Require "link proto" argument value to be within range.
      Require "(ip|ip6) proto" value to be within range.
      Require "protochain" value to be within range.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
      rpcapd: Refine SSL options in printusage().
      Fix a possible buffer overflow (Coverity CID 1619148).
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Add a README.hurd.md file.
      Explain "any" device better in pcap_create(3PCAP).
      Cross-reference some man pages better.
      Actualize README.dag and make it Markdown.
      Add a README.snf.md file.
      pcap-filter(7): Make a number of assorted improvements.
      pcap_lib_version(3PCAP): Add details and examples.
      Discuss Linux BPF extensions in the man pages.
      Note endianness in pcap_compile(3PCAP) and pcap_lookupnet(3PCAP).
      man: Document devices, interfaces and "any" better.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      Remove all remaining support for AOS (4.3BSD Unix), BSD/OS, DOS,
        HP-UX before 10.20, IRIX, {OSF/1, Digital Unix, Tru64 Unix}, SINIX,
        SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
      Add a new test program for pcap_activate().
      Make NetBSD build warning-free.
      Make Sun C build warning-free.
      Make FreeBSD, Linux and macOS builds warning-free.
      Print MAC addresses in findalldevstest.
      Parameterize the interface name in reactivatetest.
      When necessary, trust the OS to implement ffs().